crates/pg_syntax/tests/snapshots/postgres_regress/plancache@81.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select name, generic_plans, custom_plans from pg_prepared_statements\n  where  name = 'test_mode_pp';"
---
SelectStmt@0..100
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      NameP@7..11 "name"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..26
    ColumnRef@13..26
      Ident@13..26 "generic_plans"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  ResTarget@28..40
    ColumnRef@28..40
      Ident@28..40 "custom_plans"
  Whitespace@40..41 " "
  From@41..45 "from"
  Whitespace@45..46 " "
  RangeVar@46..68
    Ident@46..68 "pg_prepared_statements"
  Newline@68..69 "\n"
  Whitespace@69..71 "  "
  Where@71..76 "where"
  Whitespace@76..78 "  "
  AExpr@78..99
    ColumnRef@78..82
      NameP@78..82 "name"
    Whitespace@82..83 " "
    Ascii61@83..84 "="
    Whitespace@84..85 " "
    AConst@85..99
      Sconst@85..99 "'test_mode_pp'"
  Ascii59@99..100 ";"

