crates/pg_syntax/tests/snapshots/postgres_regress/point@19.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT p1.f1 AS point1, p2.f1 AS point2, p1.f1 <-> p2.f1 AS dist\n   FROM POINT_TBL p1, POINT_TBL p2\n   ORDER BY dist, p1.f1[0], p2.f1[0];"
---
SelectStmt@0..137
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    ColumnRef@7..12
      Ident@7..9 "p1"
      Ascii46@9..10 "."
      Ident@10..12 "f1"
    Whitespace@12..13 " "
    As@13..15 "AS"
    Whitespace@15..16 " "
    Ident@16..22 "point1"
  Ascii44@22..23 ","
  Whitespace@23..24 " "
  ResTarget@24..39
    ColumnRef@24..29
      Ident@24..26 "p2"
      Ascii46@26..27 "."
      Ident@27..29 "f1"
    Whitespace@29..30 " "
    As@30..32 "AS"
    Whitespace@32..33 " "
    Ident@33..39 "point2"
  Ascii44@39..40 ","
  Whitespace@40..41 " "
  ResTarget@41..64
    AExpr@41..56
      ColumnRef@41..46
        Ident@41..43 "p1"
        Ascii46@43..44 "."
        Ident@44..46 "f1"
      Whitespace@46..47 " "
      Op@47..50 "<->"
      Whitespace@50..51 " "
      ColumnRef@51..56
        Ident@51..53 "p2"
        Ascii46@53..54 "."
        Ident@54..56 "f1"
    Whitespace@56..57 " "
    As@57..59 "AS"
    Whitespace@59..60 " "
    Ident@60..64 "dist"
  Newline@64..65 "\n"
  Whitespace@65..68 "   "
  From@68..72 "FROM"
  Whitespace@72..73 " "
  RangeVar@73..85
    Ident@73..82 "POINT_TBL"
    Whitespace@82..83 " "
    Alias@83..85
      Ident@83..85 "p1"
  Ascii44@85..86 ","
  Whitespace@86..87 " "
  RangeVar@87..99
    Ident@87..96 "POINT_TBL"
    Whitespace@96..97 " "
    Alias@97..99
      Ident@97..99 "p2"
  Newline@99..100 "\n"
  Whitespace@100..103 "   "
  SortBy@103..116
    Order@103..108 "ORDER"
    Whitespace@108..109 " "
    By@109..111 "BY"
    Whitespace@111..112 " "
    ColumnRef@112..116
      Ident@112..116 "dist"
  Ascii44@116..117 ","
  Whitespace@117..118 " "
  SortBy@118..125
    AIndirection@118..125
      ColumnRef@118..123
        Ident@118..120 "p1"
        Ascii46@120..121 "."
        Ident@121..123 "f1"
      Ascii91@123..124 "["
      AIndices@124..125
        AConst@124..125
          Iconst@124..125 "0"
  Ascii93@125..126 "]"
  Ascii44@126..127 ","
  Whitespace@127..128 " "
  SortBy@128..135
    AIndirection@128..135
      ColumnRef@128..133
        Ident@128..130 "p2"
        Ascii46@130..131 "."
        Ident@131..133 "f1"
      Ascii91@133..134 "["
      AIndices@134..135
        AConst@134..135
          Iconst@134..135 "0"
  Ascii93@135..136 "]"
  Ascii59@136..137 ";"

