crates/pg_syntax/tests/snapshots/postgres_regress/point@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT p1.f1 AS point1, p2.f1 AS point2\n   FROM POINT_TBL p1, POINT_TBL p2\n   WHERE (p1.f1 <-> p2.f1) > 3;"
---
SelectStmt@0..106
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    ColumnRef@7..12
      Ident@7..9 "p1"
      Ascii46@9..10 "."
      Ident@10..12 "f1"
    Whitespace@12..13 " "
    As@13..15 "AS"
    Whitespace@15..16 " "
    Ident@16..22 "point1"
  Ascii44@22..23 ","
  Whitespace@23..24 " "
  ResTarget@24..39
    ColumnRef@24..29
      Ident@24..26 "p2"
      Ascii46@26..27 "."
      Ident@27..29 "f1"
    Whitespace@29..30 " "
    As@30..32 "AS"
    Whitespace@32..33 " "
    Ident@33..39 "point2"
  Newline@39..40 "\n"
  Whitespace@40..43 "   "
  From@43..47 "FROM"
  Whitespace@47..48 " "
  RangeVar@48..60
    Ident@48..57 "POINT_TBL"
    Whitespace@57..58 " "
    Alias@58..60
      Ident@58..60 "p1"
  Ascii44@60..61 ","
  Whitespace@61..62 " "
  RangeVar@62..74
    Ident@62..71 "POINT_TBL"
    Whitespace@71..72 " "
    Alias@72..74
      Ident@72..74 "p2"
  Newline@74..75 "\n"
  Whitespace@75..78 "   "
  Where@78..83 "WHERE"
  Whitespace@83..84 " "
  Ascii40@84..85 "("
  AExpr@85..105
    AExpr@85..100
      ColumnRef@85..90
        Ident@85..87 "p1"
        Ascii46@87..88 "."
        Ident@88..90 "f1"
      Whitespace@90..91 " "
      Op@91..94 "<->"
      Whitespace@94..95 " "
      ColumnRef@95..100
        Ident@95..97 "p2"
        Ascii46@97..98 "."
        Ident@98..100 "f1"
    Ascii41@100..101 ")"
    Whitespace@101..102 " "
    Ascii62@102..103 ">"
    Whitespace@103..104 " "
    AConst@104..105
      Iconst@104..105 "3"
  Ascii59@105..106 ";"

