crates/pg_syntax/tests/snapshots/postgres_regress/point@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX point_gist_tbl_index ON point_gist_tbl USING gist (f1);
---
IndexStmt@0..68
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..33 "point_gist_tbl_index"
  Whitespace@33..34 " "
  On@34..36 "ON"
  Whitespace@36..37 " "
  RangeVar@37..51
    Ident@37..51 "point_gist_tbl"
  Whitespace@51..52 " "
  Using@52..57 "USING"
  Whitespace@57..58 " "
  Ident@58..62 "gist"
  Whitespace@62..63 " "
  Ascii40@63..64 "("
  IndexElem@64..66
    Ident@64..66 "f1"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

