crates/pg_syntax/tests/snapshots/postgres_regress/point@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_seqscan TO true;
---
VariableSetStmt@0..27
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..18 "enable_seqscan"
  Whitespace@18..19 " "
  To@19..21 "TO"
  Whitespace@21..22 " "
  AConst@22..26
    TrueP@22..26 "true"
  Ascii59@26..27 ";"

